# rrecall

./: README.md  pyproject.toml  rrecall-architecture.md  rrecall-implementation-plan.md
.claude/agent-memory/test-writer/: MEMORY.md
.claude/agents/: test-writer.md
.claude/skills/: rrecall.md
.forgejo/workflows/: test.yml
.github/workflows/: test.yml
config/: rrecall.example.toml
scripts/: install-hooks.ps1  install-hooks.sh
src/rrecall/: __init__.py  cli.py  config.py  mcp_server.py
src/rrecall/code/: indexer.py  searcher.py
src/rrecall/code/chunkers/: languages.py  treesitter.py
src/rrecall/embedding/: base.py  cost_tracker.py  local_onnx.py  openai_provider.py
src/rrecall/hooks/: backfill.py  finalize.py  markdown_converter.py  pre_compact.py  session_end.py  session_registry.py  transcript_parser.py
src/rrecall/notes/: indexer.py  searcher.py
src/rrecall/utils/: hashing.py  logging.py
src/rrecall/vectordb/: lancedb_store.py
tests/: conftest.py  test_chunker_languages.py  test_cli.py  test_code_indexer.py  test_code_searcher.py  test_config.py  test_cost_tracker.py  test_embedding_base.py  test_finalize.py  test_hashing.py  test_install_hooks_ps1.py  test_install_hooks_sh.py  test_lancedb_store.py  test_languages.py  test_local_onnx.py  test_logging.py  test_markdown_converter.py  test_mcp_server.py  test_notes_indexer.py  test_notes_searcher.py  test_openai_provider.py  test_pre_compact.py  test_session_end.py  test_session_registry.py  test_transcript_parser.py  test_treesitter_chunker.py
